[package]
name = "aoc2021-rust"
version = "0.1.0"
authors = ["Marcin Puc <marcin.e.puc@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "d01p1"
path = "src/days/d01p1.rs"

[dependencies]
aoc-utils = "0.4.0"
elapsed = "0.1.2"
itertools = "0.10.1"
scan_fmt = "0.2.6"
